# TDS-MODERN

./: CMakeLists.txt
src/: app.cpp  app.hpp  assets.cpp  assets.hpp  config.cpp  config.hpp  config.inl  main.cpp  utils.cpp  utils.hpp
